syntax = "proto3";

package saw;

service SawAuth {
    rpc authUser(UserAuthRequest) returns (UserAuthResponse);
}

message UserAuthRequest {
    string user = 1;
    string password = 2;
    string macAddress = 3;
}

message UserAuthResponse {
    AuthStatusCode state = 2;
    string msg = 3;
}

enum AuthStatusCode {
    AUTH_OK = 0;
    INVALID_SIGNATURE = 1;
    EMPTY_ACCOUNT = 2;
    POLICY_REJECT = 3;
    BLACKLISTED = 4;
    AUTH_CONNECTION_ERROR = 5;
    AUTH_NO_CLUE_WHATS_WRONG = 6;
}